test/Runner/errors/tests/MI/Seed/Seeding1.runtime.js
eve("Suite", () => {
	seed("Seed", () => {
		throw new Error();
	});
}, { mode: Suite.mode.INTERRUPT_RUN });
